test/corpus/tagged_templates.txt
==================
Tagged template string with interpolation
==================

sub test()
    result = tag`hello ${name}`
end sub

---

(source_file
  (sub_statement
    (sub_start)
    name: (identifier
      (regular_identifier))
    parameters: (parameter_list)
    body: (block
      (assignment_statement
        left: (variable_declarator
          (identifier
            (regular_identifier)))
        right: (tagged_template_string
          tag: (identifier
            (regular_identifier))
          template: (template_string
            (template_literal)
            (template_interpolation
              (prefix_exp
                (identifier
                  (regular_identifier))))))))
    (end_statement
      (end_sub))))

==================
Tagged template string without interpolation
==================

sub test()
    result = myTag`plain text`
end sub

---

(source_file
  (sub_statement
    (sub_start)
    name: (identifier
      (regular_identifier))
    parameters: (parameter_list)
    body: (block
      (assignment_statement
        left: (variable_declarator
          (identifier
            (regular_identifier)))
        right: (tagged_template_string
          tag: (identifier
            (regular_identifier))
          template: (template_string
            (template_literal)))))
    (end_statement
      (end_sub))))
